# admin-panel

./: LICENSE  docker-compose.yml  start.md
backend/: .env  Dockerfile  db.py  docker-compose.yml  main.py  pyproject.toml  schema.py
backend/migrations/: env.py
backend/migrations/versions/: 6dca501a8629_initial_migration.py  a06972f74ee7_init_migration.py  c0828ce3ad1b_initial_migration.py
backend/routers/: booking.py
backend/src/: db.py  main.py  models.py  settings.py
frontend/: Dockerfile  biome.jsonc  package.json  pnpm-lock.yaml
frontend/src/: layout.tsx  main.tsx  router.tsx
frontend/src/api/: sdk.gen.ts  types.gen.ts
frontend/src/assets/: layout.module.css
frontend/src/components/: HomePage.tsx
